# rust-agentic-ai-from-scrap

./: .gitignore  README.md
x01-simple-tool-call/: .env.example  Cargo.toml  README.md
x01-simple-tool-call/src/: main.rs  messages.rs  prompts.rs  tools.rs  utils.rs
