[package]
name = "x01-simple-tool-call"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
